@@ -1,3 +1,7 @@
+2002-01-13  Per Bothner  <per@bothner.com>
+
+	* XQParser.java (parse):  Skip initial Unix script header #!/PROGRAM.
+
 2002-01-07  Per Bothner  <per@bothner.com>
 
 	* XQParser.java (parseContent):  Handle '{{' and '}}'.
